syntax = "proto3";

package spotimy.v1;

service TrackService {
  rpc ListTracks (ListTracksRequest) returns (ListTracksResponse);
}

message Track {
  string name = 1;
  string artist_id = 2;
  int32 bpm = 3;
  repeated string genres = 4;
}

message ListTracksRequest {
  repeated string ids = 1;
}

message ListTracksResponse {
  repeated Track tracks = 1;
}